Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76324

Menus stop being displayed after showing a submenu

    XMLWordPrintable

Details

    • Linux/Wayland
    • deac052

    Description

      Probably related to QTBUG-76124.
      Here's a video showing the issue: https://www.youtube.com/watch?v=PK5_Cc_GdpI

      If I navigate the menu with the keyboard, menus stop being displayed altogether after showing a submenu.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johanhelsing Johan Helsing
            apol Aleix Pol
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes